# webshot

./: .clang-tidy  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  README.md  check_unicode_hygiene.py  conventional_commits.md  delegated_devenv.sh  development_deps.txt  devenv.nix  devenv.yaml  docker-compose.yaml  docs.md  lsan.supp  manually_create_s3_bucket.py  nix-ci-diagnostics.sh  pyproject.toml  userver_config.yaml
.forgejo/: devenv_ci.sh
.github/: run_devenv_task.sh
arkhiv/: CMakeLists.txt
arkhiv/include/arkhiv/: zip_archive.hpp
arkhiv/src/: gzip.cpp  zip_archive.cpp
arkhiv/test/: zip_archive.cpp
compose_tools/: __init__.py  check_crawlerd_ready.py  check_webshotd_ready.py  common.py  infra.py  podman_compose.py  resolve_cpu_limit.py  s3_bucket.py  stack_spec.py  webshot_runtime.py  webshotd.py
config/: config_vars.debug.yaml  config_vars.prod.debug.yaml  config_vars.prod.yaml  config_vars.testsuite.yaml  static_config.yaml  userver_config.yaml
container/: nginx_test.conf
containers/: compose.yaml  loki-config.yaml  (+8 more)
tests/: CMakeLists.txt  conftest.py  container_guard_test.cpp  crawler_fallback_test.cpp  error_utils_test.cpp  host_policy_test.cpp  is_valid_webshot_url_test.cpp  link_test.cpp  paging_db.py  podman_stub_main.cpp  routes.py  s3_v4_client_test.cpp  test_denylist_check_handler.py  test_webshot_by_id_functional.py  test_webshot_capture_flow.py  test_webshot_chaos_s3.py  test_webshot_concurrency.py  test_webshot_cooldown.py  test_webshot_paging_db.py  test_webshot_routes.py  webshot_cursor_test.cpp  webshot_pagination_test.cpp  webshot_prefix_pagination_test.cpp
tests/helpers/: constants.py  prefix.py  s3_bucket.py  sql_loader.py
webshotd/: CMakeLists.txt  browser_sandbox.sh  bwrap_status_wrapper.sh  collect_build_times.py  denoise_stacktrace.py  devenv_module.nix  webshotd_wrapper.sh  webshotd_wrapper.sh.in
webshotd/config/: config_vars.debug.yaml  config_vars.dev.yaml  config_vars.prod.yaml  config_vars.prodlike.yaml  config_vars.testsuite.yaml  dns_hosts.dev  static_config.yaml
webshotd/include/: by_id_handler.hpp  by_prefix_handler.hpp  character_type.hpp  client_ip.hpp  config.hpp  crawlerd_client.hpp  crud.hpp  crypto.hpp  cursor.hpp  database.hpp  deadline_utils.hpp  denylist.hpp  denylist_check_handler.hpp  disallow_and_purge_handler.hpp  docs_handler.hpp  docs_static_handler.hpp  error_utils.hpp  expected.hpp  grab_value.hpp  handler.hpp  handler_request_support.hpp  http.hpp  http_utils.hpp  integers.hpp  invariant.hpp  ip.hpp  ip_utils.hpp  job_handler.hpp  json.hpp  link.hpp  pagination.hpp  prefix_pagination.hpp  prefix_utils.hpp  s3_refresh_utils.hpp  s3_secdist.hpp  server_errors.hpp  storage_url.hpp  text.hpp  text_postgres_formatter.hpp  try.hpp  (+6 more)
webshotd/include/crawler/: artifacts.hpp  browser_page_lifecycle.hpp  browser_sandbox.hpp  browser_session.hpp  cdp_client.hpp  cdp_request_tracker.hpp  cgroup_stats.hpp  egress_proxy.hpp  failure.hpp  fallback.hpp  launch_policy.hpp  limits.hpp  runner.hpp
webshotd/include/s3/: client.hpp  credentials_types.hpp  refresh_utils.hpp  s3_url_utils.hpp  s3_v4_client.hpp  secdist.hpp  sigv4_signer.hpp  sts_client.hpp  url_utils.hpp
webshotd/sql/query/: check_allowlist_tree.sql  delete_allowlist_host.sql  delete_client_ip_cooldowns_expired.sql  delete_client_ip_ratelimits_expired.sql  insert_allowlist_host.sql  insert_capture.sql  lock_client_ip_cooldown.sql  select_capture.sql  select_client_ip_cooldown.sql  select_client_ip_ratelimit.sql  upsert_client_ip_cooldown.sql  upsert_client_ip_ratelimit.sql
webshotd/sql/schema/capture_meta_db/migrations/: V0001__initial.sql
webshotd/sql/schema/shared_state_db/migrations/: V0001__initial.sql
webshotd/src/: access_policy.cpp  allowlist_handler.cpp  allowlist_handler.hpp  browser_probe_handler.cpp  browser_probe_handler.hpp  by_id_handler.cpp  by_id_handler.hpp  by_prefix_handler.cpp  by_prefix_handler.hpp  client_ip_ratelimiter.cpp  client_ip_ratelimiter.hpp  config.cpp  crawlerd_client.cpp  crud.cpp  cursor.cpp  deny_and_purge_handler.cpp  deny_and_purge_handler.hpp  denylist.cpp  denylist.hpp  denylist_check_handler.cpp  denylist_check_handler.hpp  disallow_and_purge_handler.cpp  disallow_and_purge_handler.hpp  docs_handler.cpp  docs_handler.hpp  docs_static_handler.cpp  error_utils.cpp  exception_handling_middleware.cpp  exception_handling_middleware.hpp  handler.cpp  handler.hpp  handler_request_support.hpp  integers_postgres_formatter.cpp  integers_postgres_formatter.hpp  job_handler.cpp  job_handler.hpp  link.cpp  main.cpp  metrics.cpp  metrics.hpp  (+13 more)
webshotd/src/crawler/: artifacts.cpp  browser_page_lifecycle.cpp  browser_sandbox.cpp  browser_session.cpp  browser_session.hpp  cdp_client.cpp  cdp_client.hpp  cgroup_stats.cpp  egress_proxy.cpp  egress_proxy.hpp  error.cpp  failure.cpp  failure.hpp  launch_policy.hpp  runner.cpp  runner.hpp
webshotd/src/s3/: client.cpp  s3_sts_client.cpp  s3_url_utils.cpp  s3_v4_client.cpp  sigv4_signer.cpp  sts_client.cpp  url_utils.cpp
webshotd/test/: CMakeLists.txt  allowlist_handler.py  browser_page_lifecycle.cpp  browser_sandbox.cpp  capture_flow.py  capture_flow_https.py  capture_flow_subresources.py  cdp_request_tracker.cpp  cgroup_stats.cpp  chaos_s3.py  concurrency.py  conftest.py  cooldown.py  crawler_artifacts.cpp  crawler_browser_sandbox.cpp  crawler_failure.cpp  crawler_fallback.cpp  cursor.cpp  deadline_utils.cpp  deduplication.py  denylist_check_handler.py  error_utils.cpp  expected.cpp  integers.cpp  ip.cpp  json.cpp  link.cpp  pagination.cpp  paging_db.py  prefix_pagination.cpp  proxy_limits.py  ratelimit.py  routes.py  s3_refresh_schedule.cpp  s3_secdist.cpp  s3_sts_client.cpp  s3_url_utils.cpp  s3_v4_client.cpp  s3_v4_client_abort_probe.cpp  static_config.testsuite_components.yaml.inc  (+3 more)
webshotd/test/helper/: capture_flow.py  coarse_profile.py  config_hooks.py  constants.py  s3_bucket.py  s3_gate_config.py  wacz_validator.py  waiters.py
webshotd/test/s3/: client.cpp  refresh_schedule.cpp  secdist.cpp  sts_client.cpp  url_utils.cpp
(+283 files in other folders)
