[project]
name = "webshot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "conan>=2.22.2",
    "ruff>=0.14.6",
    "sqlfluff>=3.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.sqlfluff.core]
dialect = "postgres"
max_line_length = 100
exclude_rules = ["RF04"]
